[project]
name = "azlog"
version = "0.1.0"
description = "Python module to ease Azure DevOps pipelines logging commands"
authors = [
    {name = "Jonathan Scherrer", email = "jonathan.s.scherrer@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
